fix: subnav on small screens, add icons

--- a/polaris.shopify.com/src/components/Subnav/Subnav.module.scss
+++ b/polaris.shopify.com/src/components/Subnav/Subnav.module.scss
@@ -1,15 +1,27 @@
-.Items {
-  --text: #000;
-  --border: #000;
+@import '../../styles/variables.scss';
 
-  display: inline-flex;
+.Subnav {
+  margin-bottom: 1.5rem;
+}
+
+.Items {
+  --border: #e3e3e3;
+  display: flex;
+  flex-direction: column;
   gap: var(--p-space-1);
   border-radius: var(--p-border-radius-3);
-  border: 1px solid var(--border);
+  border: 1.5px solid var(--border);
   padding: var(--p-space-1);
+
+  @media screen and (min-width: $breakpointTablet) {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .Item {
+  --surface: rgba(250, 250, 250, 1);
   display: flex;
   align-items: center;
   gap: var(--p-space-2);
@@ -17,15 +29,14 @@
   border-radius: var(--p-border-radius-2);
   background-color: var(--surface);
   color: var(--text);
-  fill: var(--text);
+  fill: #4a4a4a;
 
   &:hover {
-    background-color: var(--surface-subdued);
+    --surface: rgba(241, 241, 241, 1);
   }
 }
 
 .Item--active {
-  --surface: #000;
-  --surface-subdued: #000;
-  --text: #fff;
+  --surface: #f1f1f1;
+  --text: #303030;
 }
